# DiskV

./: CMakeLists.txt  README.md
demos/: CMakeLists.txt  create_ground_truth.cpp  dataset.sh  dataset_deep100m.sh  dataset_sift100m.sh  dataset_sift1b.sh  dataset_sift1b_hybrid.sh  demo_script.cpp  demo_script_hybrid.cpp  disk_speed.sh  run_program.sh
faiss/: CMakeLists.txt  Clustering.cpp  Index.cpp  Index.h  IndexDiskV.cpp  IndexDiskV.h  IndexIVF.cpp  IndexIVF.h  IndexIVFDiskANN.cpp  IndexIVFFastScan.cpp  IndexIVFFastScan.h  IndexIVFFlat.cpp  IndexIVFPQ.cpp  IndexIVFPQFastScan.cpp  IndexIVFPQFastScanDisk.cpp  IndexIVFPQFastScanDisk.h
faiss/impl/: AsyncIOExtension.h  DiskIOProcessor.h  DiskInvertedListHolder.cpp  DiskInvertedListHolder.h  ProductQuantizer.cpp  index_read.cpp  index_write.cpp  simd_result_handlers.h
faiss/invlists/: InvertedLists.cpp  InvertedLists.h
faiss/utils/: distances.cpp  distances.h  distances_simd.cpp
tutorial/cpp/: 7-PQFastScan.cpp  CMakeLists.txt
